motor_test.cydsn/REBUILD.log
--------------- Rebuild Started: 10/10/2017 11:59:51 Project: motor_test, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyfitter_cfg.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cymetadata.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\A1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\A2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ML_EN.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Clock_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SE_L_B.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SE_L_A.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_INT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_BOOT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SEL_QUAD.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SEL_QUAD_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CLK_CNT_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ISR_QUAD1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\A3.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\A4.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\MR_EN.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SER_QUAD.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SER_QUAD_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SE_R_B.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SE_R_A.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ISR_QUAD2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\UART_1_IntClock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SEL_QUAD_Cnt16.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SEL_QUAD_Cnt16_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SER_QUAD_Cnt16.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SER_QUAD_Cnt16_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\Cm3Start.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyBootAsmGnu.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyDmac.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyFlash.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CyLib.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyPm.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\CySpc.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\cyutils.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_2_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\LED1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\S0.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\COLOUT.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\S1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\S2.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\S3.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\timer_clock.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\timer_clock_1.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ISR_COL.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\COL_COUNTER.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\COL_COUNTER_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ECHO_R.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ECHO_L.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SERVO_CTRL.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_SERVO.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PWM_SERVO_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\PIEZO.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\TIMER_PIEZO.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\TIMER_PIEZO_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\TRIG.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\USTimer_R.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\USTimer_R_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ISR_US_R.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\USTimer_L.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\USTimer_L_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ISR_US_L.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SECL_QUAD.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SECL_QUAD_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SE_CL_A.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SE_CL_B.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\ISR_QUAD_CL.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\A5.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\A6.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\MCL_EN.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SECL_QUAD_Cnt16.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\SECL_QUAD_Cnt16_PM.o"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\motor_test.hex"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\motor_test.elf"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\motor_test.map"
Deleting file ".\motor_test.cycdx"
Deleting file ".\motor_test.svd"
Deleting file ".\motor_test.rpt"
Deleting file ".\motor_test_timing.html"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_C__ARM_GCC_GENERIC.P"
Deleting file ".\CortexM3\ARM_GCC_541\Debug\.deps\SOURCE_ASM__ARM_GCC_GENERIC.P"
cydsfit.exe -.appdatapath "C:\Users\hnevg\AppData\Local\Cypress Semiconductor\PSoC Creator\4.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\psoc\psoc-test\motor_test.cydsn\motor_test.cyprj -d CY8C5888LTI-LP097 -s C:\psoc\psoc-test\motor_test.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 2 pin(s) will be assigned a location by the fitter: COL1EN(0), COL2EN(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
Warning: sta.M0021: motor_test_timing.html: Warning-1350: Asynchronous path(s) exist from "timer_clock(routed)" to "timer_clock_1". See the timing report for details. (File=C:\psoc\psoc-test\motor_test.cydsn\motor_test_timing.html)
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
main.c: In function 'moveServo':
main.c:699:18: warning: variable 'oldduty' set but not used [-Wunused-but-set-variable]
     uint16 duty, oldduty;
                  ^
main.c: In function 'task4':
main.c:1014:17: warning: implicit declaration of function 'LEDR_Write' [-Wimplicit-function-declaration]
                 LEDR_Write(0);
                 ^
main.c:1015:17: warning: implicit declaration of function 'LEDG_Write' [-Wimplicit-function-declaration]
                 LEDG_Write(0);
                 ^
main.c:1016:17: warning: implicit declaration of function 'LEDB_Write' [-Wimplicit-function-declaration]
                 LEDB_Write(0);
                 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
main.c:1006:12: warning: unused variable 'dist' [-Wunused-variable]
     uint16 dist;
            ^
main.c: In function 'checkColour':
main.c:1113:16: error: too few arguments to function 'getColour'
     int col1 = getColour();
                ^
main.c:591:5: note: declared here
 int getColour(int sensor) {
     ^
main.c:1114:16: error: too few arguments to function 'getColour'
     int col2 = getColour();
                ^
main.c:591:5: note: declared here
 int getColour(int sensor) {
     ^
main.c:1115:16: error: too few arguments to function 'getColour'
     int col3 = getColour();
                ^
main.c:591:5: note: declared here
 int getColour(int sensor) {
     ^
main.c:1115:9: warning: unused variable 'col3' [-Wunused-variable]
     int col3 = getColour();
         ^
main.c:1114:9: warning: unused variable 'col2' [-Wunused-variable]
     int col2 = getColour();
         ^
main.c:1113:9: warning: unused variable 'col1' [-Wunused-variable]
     int col1 = getColour();
         ^
main.c: In function 'main':
main.c:1150:9: warning: unused variable 'col' [-Wunused-variable]
     int col;
         ^
--------------- Rebuild Failed: 10/10/2017 12:00:18 ---------------
